Negrita y fuente modificada

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,5 +5,7 @@ body {
 h1 {
     font-size: 2rem;
     color: brown;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
 }
 
